--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -3,3 +3,5 @@ script(type="text/javascript", src="/vendor/angular/angular.js")
 script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js")
 script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
 script(type="text/javascript", src="/app/app.js")
+script(type="text/javascript", src="/app/main/pvMainCtrl.js")
+script(type="text/javascript", src="/app/account/pvNavBarLoginCtrl.js")
