--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,10 +1,23 @@
 extends ../includes/layout
 
 block main-content
-  section.content
-    div(ng-view)
-  h2= mongoMessage
+    .navbar.navbar-inverse.navbar-fixed-top
+        .container
+            .navbar-header
+                a.navbar-brand(href="/") PragmaVision
+                    h6 -In Depth Tech Training
+            .navbar-collapse.collapse
+                ul.nav.navbar-nav
+                    li
+                      a(href="/") Home
+                div(ng-include="'/partials/account/navbar-login'")
 
+    section.content
+      div(ng-view)
+
+
+    footer.container.text-center
+      p &copy; 2014 PragmaVision Corp International Ltd.
 
 
 
